# bbaug

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: develop.yml  master-build-dist.yml  pythonpackage.yml  release-build-dist.yml  release.yml
bbaug/: _version.py  exceptions.py
bbaug/augmentations/: __init__.py  augmentations.py
bbaug/policies/: __init__.py  policies.py
bbaug/visuals/: __init__.py  visuals.py
notebooks/: Untitled.ipynb  custom_augmentations.ipynb  example_run.ipynb  examples.ipynb
notebooks/data/example_dataset/boxes/: dog_1.txt
tests/: test_augmentations.py  test_policies.py  test_visuals.py
