[tool.poetry]
name = "bbaug"
version = "0.2.0-rc.9"
description = "Bounding box augmentations for Pytorch"
authors = ["Harpal Sahota"]

[tool.poetry.dependencies]
python = "^3.6"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.4.0-cp37-cp37m-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu101/torchvision-0.5.0-cp37-cp37m-win_amd64.whl"}
imgaug = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
jupyterlab = "^2.0.1"
bumpversion = "^0.5.3"
bump2version = "^1.0.0"
pytest-mock = "^2.0.0"
pytest-cov = "^2.8.1"
coverage-badge = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
